--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,10 @@
 	url = https://github.com/DPDK/dpdk.git
 [submodule "3rdparty/libiec61850"]
 	path = 3rdparty/libiec61850
-	url = https://github.com/mz-automation/libiec61850.git
+	url = https://github.com/Rustam12345m/libiec61850.git
 [submodule "3rdparty/googletest"]
 	path = 3rdparty/googletest
 	url = https://github.com/google/googletest.git
+[submodule "3rdparty/cxxopts"]
+	path = 3rdparty/cxxopts
+	url = https://github.com/jarro2783/cxxopts.git
