--- a/src/bus_processor/CMakeLists.txt
+++ b/src/bus_processor/CMakeLists.txt
@@ -1,13 +1,15 @@
 set(TARGET_NAME bus_processor)
+
 add_executable(${TARGET_NAME}
-    goose_parser.hpp
-    goose_parser.cpp
+    process_bus_parser.hpp
+    process_bus_parser.cpp
 
     ../common/utils.hpp
     ../common/utils.cpp
 
     main.cpp
 )
+
 setup_dpdk(${TARGET_NAME})
 install(TARGETS ${TARGET_NAME} DESTINATION bin)
 
