Disable libiec61850's debug output

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CONFIG_IEC61850_R_GOOSE         ON CACHE BOOL "on")
 set(CONFIG_IEC61850_L2_GOOSE        ON CACHE BOOL "on")
 set(BUILD_EXAMPLES                  OFF CACHE BOOL "off")
 set(CONFIG_IEC61850_SNTP_CLIENT     OFF CACHE BOOL "off")
+# set(DEBUG_GOOSE_SUBSCRIBER TRUE)
+# set(DEBUG_GOOSE_PUBLISHER TRUE)
 add_subdirectory(libiec61850 EXCLUDE_FROM_ALL)
 
 function(setup_libiec61850 TARGET_NAME)
