Refactor bus_generator, add the aux thread and GenApplication class.

--- a/src/bus_generator/CMakeLists.txt
+++ b/src/bus_generator/CMakeLists.txt
@@ -1,15 +1,17 @@
 set(TARGET_NAME bus_generator)
 
 add_executable(${TARGET_NAME}
+    ../common/utils.hpp
+    ../common/utils.cpp
+
     goose_traffic_gen.hpp
     goose_traffic_gen.cpp
 
     sv_traffic_gen.hpp
     sv_traffic_gen.cpp
 
-    ../common/utils.hpp
-    ../common/utils.cpp
-
+    gen_application.hpp
+    gen_application.cpp
     main.cpp
 )
 
