Add static pipeline for frame processing based on template classes

--- a/src/bus_processor/CMakeLists.txt
+++ b/src/bus_processor/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${TARGET_NAME}
     ../common/utils.cpp
 
     process_bus_parser.hpp
-    # process_bus_parser.cpp
+    process_bus_parser.cpp
 
     rx_application.hpp
     rx_application.cpp
