--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(${TARGET_NAME}
     goose_traffic_test.cpp
     sv_traffic_test.cpp
     appid_container_test.cpp
+    pipeline_test.cpp
 
     main.cpp
 )
